# bazel-proto

./: .gitignore  BUILD.bazel  WORKSPACE  bazel-bazel-proto  bazel-bin  bazel-genfiles  bazel-out  bazel-testlogs  main.go
helper/: BUILD.bazel  helper.go
proto/: BUILD.bazel  demo.pb.go  demo.proto
