load("@io_bazel_rules_go//go:def.bzl", "gazelle", "go_binary", "go_library")

gazelle(
    name = "gazelle",
    prefix = "github.com/trystanj/bazel-proto",
)

#go_library(
#    name = "go_default_library",
#    srcs = ["main.go"],
#    importpath = "github.com/trystanj/bazel-proto",
#    visibility = ["//visibility:private"],
#    deps = ["//proto/demo:go_default_library"],
#)

go_binary(
    name = "bazel-proto",
    importpath = "github.com/trystanj/bazel-proto",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)
