load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "demo",
    srcs = ["demo.proto"],
    deps = [],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "go_default_library",
    proto = ":demo",
    deps = [],
    visibility = ["//visibility:public"],
)